Fix h2 heading contrast ratios

--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -1,6 +1,6 @@
 :root{
     --primary-color: #3B1E54;
-    --secondary-color: #9B7EBD;
+    --secondary-color: #75539c;
     --accent-color: #D4BEE4;
     --accent-color2: #EEEEEE;
 }
